# IIITH-Mess-MCP-with-Siri-

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  SIRI_SHORTCUTS_GUIDE.md  api_wrapper.py  auto_register.py  pyproject.toml  registration_preferences.json  server.py
iiith_mess_mcp/: server.py
